# monad.rs

./: .travis.yml  Cargo.toml  README.md
benches/: state.rs
doc/: search-index.js
doc/free/: index.html  stability.html  stability.json
doc/free/free/: index.html
doc/free/free/trampoline/: fn.bind.html  fn.done.html  fn.more.html  fn.point.html  fn.wrap.html  index.html  struct.Trampoline.html  type.Sig.html
doc/free_macros/: index.html  macro.monad!.html  stability.html  stability.json
doc/monad/: index.html  stability.html  stability.json
doc/monad/monad/: index.html
doc/monad/monad/identity/: index.html
doc/monad/monad/identity/free/: fn.bind.html  fn.point.html  fn.wrap.html  index.html  struct.Identity.html  struct.Sig.html
doc/monad/monad/reader/: index.html
doc/monad/monad/reader/trampoline/: fn.ask.html  fn.bind.html  fn.point.html  index.html  struct.Reader.html
doc/monad/monad/state/: index.html
doc/monad/monad/state/free/: enum.Sig.html  fn.bind.html  fn.get.html  fn.map.html  fn.point.html  fn.put.html  fn.wrap.html  index.html  struct.State.html
doc/monad/monad/state/trampoline/: fn.bind.html  fn.get.html  fn.point.html  fn.put.html  index.html  struct.State.html
doc/monad_macros/: index.html  macro.mdo!.html  stability.html  stability.json
doc/src/free/Users/dwm/.cargo/registry/src/github.com-1ecc6299db9ec823/free-0.0.1/src/: lib.rs.html
doc/src/free/Users/dwm/.cargo/registry/src/github.com-1ecc6299db9ec823/free-0.0.1/src/free/: mod.rs.html  trampoline.rs.html
doc/src/free_macros/src/: lib.rs.html
doc/src/free_macros/src/free/: monad.rs.html
doc/src/monad/src/: lib.rs.html
doc/src/monad/src/monad/: mod.rs.html
doc/src/monad/src/monad/identity/: free.rs.html  mod.rs.html
doc/src/monad/src/monad/reader/: mod.rs.html  trampoline.rs.html
doc/src/monad/src/monad/state/: free.rs.html  mod.rs.html  trampoline.rs.html
doc/src/monad_macros/src/: lib.rs.html
doc/src/tailrec/Users/dwm/.cargo/registry/src/github.com-1ecc6299db9ec823/tailrec-0.0.1/src/: lib.rs.html  trampoline.rs.html
doc/tailrec/: index.html  stability.html  stability.json
doc/tailrec/trampoline/: index.html
examples/: counter.rs  interpreter.rs  reader.rs  state.rs
examples/identity/: free.rs
examples/reader/: trampoline.rs
examples/state/: free.rs  trampoline.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/monad/: mod.rs
src/monad/identity/: free.rs
src/monad/reader/: mod.rs  trampoline.rs
src/monad/state/: free.rs  mod.rs  trampoline.rs
src/reader/: mod.rs
