[package]

name    = "monad"
version = "0.0.0"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]

[lib]
doc     = true
doctest = false
name    = "monad"
path    = "src/lib.rs"

[[bin]]
doc  = false
name = "identity-free"
path = "examples/identity/free.rs"

[[bin]]
doc  = false
name = "reader-trampoline"
path = "examples/reader/trampoline.rs"

[[bin]]
doc  = false
name = "state-free"
path = "examples/state/free.rs"

[[bin]]
doc  = false
name = "state-trampoline"
path = "examples/state/trampoline.rs"

[dependencies.free]
git = "https://github.com/epsilonz/free.rs"

[dependencies.monad_macros]
path = "./macros"

[dependencies.tailrec]
git = "https://github.com/epsilonz/tailrec.rs"

# [dev-dependencies.criterion]
# git = "https://github.com/japaric/criterion.rs"

# [dev-dependencies.criterion_macros]
# git = "https://github.com/japaric/criterion.rs"

# [dev-dependencies.quickcheck]
# git = "https://github.com/BurntSushi/quickcheck"

# [dev-dependencies.quickcheck_macros]
# git = "https://github.com/BurntSushi/quickcheck"
