[package]

name = "monad"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Stackless monads in Rust"
documentation = "http://www.rust-ci.org/epsilonz/monad.rs/doc/monad/"
keywords = ["algebra", "category-theory", "functional-programming", "math", "monads", "stackless"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/monad.rs"

[lib]
doc = true
doctest = false
name = "monad"
path = "src/lib.rs"

[[bin]]
doc = false
name = "identity-free"
path = "examples/identity/free.rs"

[[bin]]
doc = false
name = "reader-trampoline"
path = "examples/reader/trampoline.rs"

[[bin]]
doc = false
name = "state-free"
path = "examples/state/free.rs"

[[bin]]
doc = false
name = "state-trampoline"
path = "examples/state/trampoline.rs"

[dependencies.free]
git = "https://github.com/epsilonz/free.rs"

[dependencies.monad_macros]
path = "./macros"

[dependencies.tailrec]
git = "https://github.com/epsilonz/tailrec.rs"
