[package]

name = "monad"
version = "0.0.2"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Stackless monads in Rust"
documentation = "http://epsilonz.github.io/monad.rs/doc/monad/"
keywords = ["category-theory", "effects", "functional", "monads", "stackless"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/monad.rs"

[lib]
doc = true
doctest = false
name = "monad"
path = "src/lib.rs"

[[bin]]
doc = false
name = "identity-free"
path = "examples/identity/free.rs"

# [[bin]]
# doc = false
# name = "reader-trampoline"
# path = "examples/reader/trampoline.rs"

[[bin]]
doc = false
name = "state-free"
path = "examples/state/free.rs"

# [[bin]]
# doc = false
# name = "state-trampoline"
# path = "examples/state/trampoline.rs"

[dependencies.monad_macros]
path = "./macros"
version = "*"

[dependencies]

free = "*"
tailrec = "*"
