[package]

name = "monad_macros"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Stackless monads in Rust"
documentation = "http://www.rust-ci.org/epsilonz/monad.rs/doc/monad/"
keywords = ["category-theory", "effects", "functional", "monads", "stackless"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/epsilonz/monad.rs"

[lib]
name = "monad_macros"
path = "src/lib.rs"
plugin = true
